--- a/logstash/pipeline/fault-logstash.conf
+++ b/logstash/pipeline/fault-logstash.conf
@@ -9,16 +9,16 @@ input {
         jdbc_default_timezone => "Africa/Johannesburg"
         tracking_column => "last_modified_date"
         tracking_column_type => "timestamp"
-        last_run_metadata_path => "/opt/logstash/.logstash_jdbc_last_run_good"
+        last_run_metadata_path => "/opt/logstash/.logstash_jdbc_last_run_fault"
         schedule => "* * * * *"
-        statement => "select * from good_view WHERE last_modified_date > :sql_last_value"
+        statement => "select * from fault_view WHERE last_modified_date > :sql_last_value"
     }
 }
 output {
     elasticsearch {
         hosts => "elasticsearch:9200"
-        index => "good"
-        document_type => "good"
+        index => "fault"
+        document_type => "fault"
         document_id => "%{id}"
     }
 }
