--- a/logstash/pipeline/good-logstash.conf
+++ b/logstash/pipeline/good-logstash.conf
@@ -1,6 +1,6 @@
 input {
     jdbc {
-        jdbc_connection_string => "jdbc:postgresql://192.168.0.100:5432/oee"
+        jdbc_connection_string => "jdbc:postgresql://postgres:5432/oee"
         jdbc_user => "postgres"
         jdbc_password => "password"
         jdbc_validate_connection => true
@@ -9,7 +9,7 @@ input {
         jdbc_default_timezone => "Africa/Johannesburg"
         tracking_column => "last_modified_date"
         tracking_column_type => "timestamp"
-        last_run_metadata_path => "/opt/logstash/.logstash_jdbc_last_run_good"
+        last_run_metadata_path => "/usr/share/logstash/metadata/.logstash_jdbc_last_run_good"
         schedule => "* * * * *"
         statement => "select * from good_view WHERE last_modified_date > :sql_last_value"
     }
