--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
       - elk
     depends_on:
       - elasticsearch
+    extra_hosts:
+      - "postgres:192.168.0.100"
 
   kibana:
     build:
