--- a/logstash/pipeline/oee-logstash.conf
+++ b/logstash/pipeline/oee-logstash.conf
@@ -1,7 +1,7 @@
 input {
     jdbc {
         jdbc_connection_string => "jdbc:postgresql://postgres:5432/oee"
-        jdbc_user => "postgres"
+        jdbc_user => "oee"
         jdbc_password => "password"
         jdbc_validate_connection => true
         jdbc_driver_library => "/opt/logstash/postgresql-42.1.1.jar"
@@ -11,7 +11,7 @@ input {
         tracking_column_type => "timestamp"
         last_run_metadata_path => "/usr/share/logstash/metadata/.logstash_jdbc_last_run_oee"
         schedule => "* * * * *"
-        statement => "select * from oee_machine_product WHERE last_modified_date > :sql_last_value"
+        statement => "select omp.*,'site1' as site, p.code as product_code from oee_machine_product omp left join product p on p.id = omp.product_id WHERE omp.last_modified_date > :sql_last_value"
     }
 }
 output {
