--- a/logstash/pipeline/fault-logstash2.conf
+++ b/logstash/pipeline/fault-logstash2.conf
@@ -1,6 +1,6 @@
 input {
     jdbc {
-        jdbc_connection_string => "jdbc:postgresql://postgres:5432/oee2”
+        jdbc_connection_string => "jdbc:postgresql://postgres:5432/oee2"
         jdbc_user => "oee"
         jdbc_password => "password"
         jdbc_validate_connection => true
@@ -9,9 +9,9 @@ input {
         jdbc_default_timezone => "Africa/Johannesburg"
         tracking_column => "last_modified_date"
         tracking_column_type => "timestamp"
-        last_run_metadata_path => "/usr/share/logstash/metadata/.logstash_jdbc_last_run_fault2”
+        last_run_metadata_path => "/usr/share/logstash/metadata/.logstash_jdbc_last_run_fault2"
         schedule => "* * * * *"
-        statement => "select *,'site2’ as site from fault_view WHERE last_modified_date > :sql_last_value"
+        statement => "select *,'site2' as site from fault_view WHERE last_modified_date > :sql_last_value"
     }
 }
 output {
