--- a/logstash/pipeline/fault-logstash.conf
+++ b/logstash/pipeline/fault-logstash.conf
@@ -10,8 +10,8 @@ input {
         tracking_column => "last_modified_date"
         tracking_column_type => "timestamp"
         last_run_metadata_path => "/usr/share/logstash/metadata/.logstash_jdbc_last_run_fault"
-        schedule => "* * * * *"
-        statement => "select *,'site1' as site from fault_view WHERE last_modified_date > :sql_last_value"
+        schedule => "*/5 * * * *"
+        statement => "select *,'site1' as site from fault_view WHERE last_modified_date > :sql_last_value or end_date_time is null"
     }
 }
 output {
